Alignment fix

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,10 +3,3 @@
   flex-basis: 100vh;
   flex-flow: column;
 }
-
-app-page-meta {
-  align-self: flex-end;
-  position: fixed;
-  bottom: 0;
-  min-width: 100%;
-}
