--- a/src/app/page-meta/page-meta.component.scss
+++ b/src/app/page-meta/page-meta.component.scss
@@ -1,3 +1,13 @@
+:host {
+	align-self: flex-end;
+	width: 100%;
+	min-width: 100%;
+	justify-content: flex-end;
+	align-self: flex-end;
+	margin-bottom: 0;
+	margin-top: auto;
+}
+
 mat-grid-tile-footer {
   background-color: lightblue;
 }
